test/files/errors/wrongType3.jg
_main int ()
{
    x int;

    x = false;
    0 return;
}